--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,28 @@
-body {
-    background-color: rgb(244, 225, 225);
+html {
+    font-size: 100%;
+    box-sizing: border-box;
 }
 
+body {
+    margin: 0px;
+    padding: 0px;
+    min-height: 100vh;
+    background-color: rgb(178, 172, 201);
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
+
+a {
+    color: rgb(201, 211, 210);
+}
 
 h1 {
-    text-align: center;
-    font-size: 50px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border-bottom: honeydew;
-    padding:
-}
-
-nav { 
-        margin:0px auto;
-        width:100%;
-        height:50px;
-        background-color:rgb(188, 174, 174);
-        float:left;
-        padding:10px;
-        border:10px solid rgb(244, 168, 168);
-        font-size: larger;
-        font-family: sans-serif;
-        font-stretch: wider;
-}
+    padding: 20px 35px;
+    background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
