--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,8 @@ ul {
 }
 
 .About-me {
-    margin-top: 20px;
     margin-bottom: 20px;
-    padding:  20px, 20px, 10px, 20px;
+    padding:  0, 20px, 10px, 20px;
     height: 200px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #7fc199;
@@ -99,7 +98,6 @@ ul {
     color: #ffffff;
     font-size: 20px;
 }
-
 .body-images {
     width: 100%;
     height: 100%;
