--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,11 @@ html {
     box-sizing: inherit;
 }
 
-header{
+.banner {
     display:inline-block;
     background-color: rgb(10, 125, 8);;
 }
-header nav {
+.banner nav {
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 25px;
@@ -28,7 +28,7 @@ header nav {
     text-decoration: none;
 }
 
-header nav ul li {
+.banner nav ul li {
     display: inline-block;
     margin-left: 25px;
     background-color: rgb(10, 125, 8);
@@ -37,7 +37,7 @@ header nav ul li {
     padding: 20px 35px;
 }
 
-header nav ul li a {
+.banner nav ul li a {
     color: white;
     text-decoration: none;
 }
@@ -128,3 +128,64 @@ ul {
       color: white;
 
   }
+
+
+        
+    .button {
+            border-radius: 4px;
+            background-color: #9cb3b1;
+            border: none;
+            color: #FFFFFF;
+            text-align: center;
+            font-size: 15px;
+            padding: 10px;
+            width: 100px;
+            transition: all 0.5s;
+            cursor: pointer;
+            margin: 5px;
+
+           
+            left:50%;
+        
+          }
+          
+    .button span {
+            cursor: pointer;
+            display: inline-block;
+            position: relative;
+            transition: 0.5s;
+          }
+          
+    .button span:after {
+            content: '\00bb';
+            position: absolute;
+            opacity: 0;
+            top: 0;
+            right: -20px;
+            transition: 0.5s;
+          }
+          
+    .button:hover span {
+            padding-right: 25px;
+          }
+          
+    .button:hover span:after {
+            opacity: 1;
+            right: 0;
+          }
+      
+    header h1 {
+        font-size: 100px;
+        color: white;
+        background-color:  rgb(10, 125, 8);
+        padding: 10px;
+    }
+
+    header h3 {
+        background-color:  rgb(228, 246, 228);
+        font-size: 15px;
+    }
+
+    a {
+        align-items: center;
+    }
